# ms_web_dev

./: .env.example  .gitignore  .releaserc.json  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml  init-db.sh  requirements.txt
orders_microservice/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  pyproject.toml
orders_microservice/alembic/versions/: 0001_initial.py
orders_microservice/app/: dependencies.py  main.py
orders_microservice/app/core/: config.py  errors.py
orders_microservice/app/integrations/: http_products_client.py  products_client.py
orders_microservice/app/models/: __init__.py  base.py  order.py  order_item.py  order_status.py
orders_microservice/app/repositories/: order_repository.py
orders_microservice/app/routers/: orders.py
orders_microservice/app/schemas/: order.py
orders_microservice/app/services/: order_service.py
orders_microservice/tests/: conftest.py  test_alembic_upgrade.py  test_health.py
orders_microservice/tests/api/: test_orders_create.py  test_orders_create_with_real_client_mocked.py  test_orders_detail.py  test_orders_list.py  test_orders_update_status.py
orders_microservice/tests/core/: test_config.py  test_db.py
orders_microservice/tests/integration/: test_products_unavailable.py
orders_microservice/tests/integrations/: test_http_products_client.py  test_products_client_protocol.py
orders_microservice/tests/repositories/: test_order_repository.py
orders_microservice/tests/schemas/: test_order_schemas.py
orders_microservice/tests/services/: test_order_service.py
(+71 files in other folders)
